[lworld] java/lang/instrument/IsModifiableClassAgent.java test fails when run with migrates classes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • None
    • Affects Version/s: repo-valhalla
    • Component/s: core-libs

      Test java/lang/instrument/IsModifiableClassAgent.java fails when run with Valhalla migrate classes:

      Error: bad return from retransform: class java.lang.Long
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      Error: bad return from retransform: class java.lang.Integer
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      Error: bad return from retransform: class java.lang.Short
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      Error: bad return from retransform: class java.lang.Byte
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      Error: bad return from retransform: class java.lang.Double
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      Error: bad return from retransform: class java.lang.Float
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      Error: bad return from retransform: class java.lang.Character
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      Error: bad return from retransform: class java.lang.Boolean
        ERROR: java.lang.UnsupportedOperationException: class redefinition failed: attempted to change the class NestHost, NestMembers, Record, or PermittedSubclasses attribute
      java.lang.Exception: ERROR: IsModifiableClass failed.
      at IsModifiableClassApp.run(IsModifiableClassApp.java:39)
      at IsModifiableClassApp.main(IsModifiableClassApp.java:31)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
      at java.base/java.lang.reflect.Method.invoke(Method.java:580)
      at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
      at java.base/java.lang.Thread.run(Thread.java:1575)

      JavaTest Message: Test threw exception: java.lang.Exception: ERROR: IsModifiableClass failed.
      JavaTest Message: shutting down test

            Assignee:
            Coleen Phillimore
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: