8336682: [lworld] java/lang/instrument/IsModifiableClassAgent.java test fails when run with migrates classes

Reviewed-by: heidinga, fparain